--- a/code/practice/01-下拉框/index.html
+++ b/code/practice/01-下拉框/index.html
@@ -22,9 +22,9 @@
                         <li class="hover-me">
                             <a href="#">Contact Us</a>
                             <ul class="sub-of-nav">
-                                <li>Phone</li>
-                                <li>Email</li>
-                                <li>Address</li>
+                                <li><a href>Phone</a></li>
+                                <li><a href>Email</a></li>
+                                <li><a href>Address</a></li>
                             </ul>
                         </li>
                     </ul>
