--- a/code/JavaScript/03-值类型/08-字符串替换标题关键词.html
+++ b/code/JavaScript/03-值类型/08-字符串替换标题关键词.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let words = 'www.baidu.com';
+    let s = words.replace('baidu', 'google'); // 返回值是一个新数组
+    console.log(s)
+    console.log(words.replace('baidu', 'google'))
+    console.log(words) // 原数组不会改变
+    let word = ['javascript', 'css'];
+    let string = '我正在学习JavaScript和css';
+    let repalceString = word.reduce((pre, word) => {
+        return pre.toLowerCase().replace(word, `<a href="?w=${word}">${word}</a>`)
+    }, string);
+    document.body.innerHTML = repalceString
+
+</script>
 </body>
 </html>
