--- a/code/JavaScript/03-值类型/13-boolean实例操作.html
+++ b/code/JavaScript/03-值类型/13-boolean实例操作.html
@@ -1,21 +1,23 @@
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-<script>
-
-    while (true) {
-        let year = prompt('中国哪年成立?').trim()
-        if (!year) continue
-        let res = (year === '1949') ? 'right' : 'error'
-        console.log(res)
-        break
-    }
-</script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+        />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+    </head>
+    <body>
+        <script>
+            while (true) {
+                let year = prompt('中国哪年成立?').trim()
+                if (!year) continue
+                let res = year === '1949' ? 'right' : 'error'
+                console.log(res)
+                console.log(res)
+                break
+            }
+        </script>
+    </body>
 </html>
