第四章 数组

--- a/code/JavaScript/04-数组/24-filter过滤元素的使用.html
+++ b/code/JavaScript/04-数组/24-filter过滤元素的使用.html
@@ -24,7 +24,7 @@
             })
             console.log(lessons) //
             console.log(newArray) //[{title: '媒体查询响应式布局', category: 'html'},{title: 'flex布局', category: 'html'}]
-            // filter 是不改变原数组的
+            // filter 是不改变原数组的，返回值是新数组
         </script>
     </body>
 </html>
