第四章 数组

--- a/code/JavaScript/04-数组/29-处理购物车中的重复产品.html
+++ b/code/JavaScript/04-数组/29-处理购物车中的重复产品.html
@@ -54,7 +54,7 @@
             }
             unique(cart) */
             let res = cart.reduce(function (pre, value) {
-                return pre.name.includes('iphone') ? pre : value
+                return pre.includes('iphone') ? pre : value
             })
             console.log(res)
         </script>
