--- a/code/JavaScript/04-数组/29-处理购物车中的重复产品.html
+++ b/code/JavaScript/04-数组/29-处理购物车中的重复产品.html
@@ -10,11 +10,11 @@
         <script>
             let cart = [
                 { name: 'iphone', price: 4999 },
-                { name: 'imac', price: 8999 },
+                { name: 'imac', price: 10289 },
                 { name: 'ipad', price: 5999 },
                 { name: 'iphone', price: 4999 },
                 { name: 'iphone', price: 4999 },
-                { name: 'ipad', price: 5999 },
+                { name: 'ipad pro', price: 10099 },
             ]
             // 去除购物车中重复的商品
             /* function unique(cart) {
@@ -53,10 +53,26 @@
                 })
             }
             unique(cart) */
-            let res = cart.reduce(function (pre, value) {
-                return pre.includes('iphone') ? pre : value
-            })
-            console.log(res)
+            // 获取超过一万元的商品
+            /* function getNameByPrice(productions, price) {
+                return productions.reduce(function (arr, cur) {
+                    if (cur.price > price) {
+                        arr.push(cur.name)
+                    }
+                    return arr
+                }, [])
+            } */
+            //console.log(getNameByPrice(cart, 10000))
+            // 去除购物车中的重复产品
+            function unique(cart) {
+                return cart.reduce(function (arr, cur) {
+                    if (arr.includes(cur['name']) === false) {
+                        arr.push(cur)
+                    }
+                    return arr
+                }, [])
+            }
+            console.log(unique(cart))
         </script>
     </body>
 </html>
